5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1716_2498.log
== TEST (2019-05-16 15:19:52) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a a1/100
b = b1/100
t=0
while a<==b:
		a = a - b
	a1 = 2 * b1 - m
	dia = dia +1
	if (h > 0) :
		else
		
-- ERROR:
File "XXXX", line 5
    a a1/100
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:20:02) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while a<==b:
		a = a - b
	a1 = 2 * b1 - m
	dia = dia +1
	if (h > 0) :
		else
		
-- ERROR:
File "XXXX", line 8
    while a<==b:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:20:26) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a <== b):
		a = a - b
	a1 = 2 * b1 - m
	dia = dia +1
	if (h > 0) :
		else
		
-- ERROR:
File "XXXX", line 8
    while (a <== b):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:24:09) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a <== b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(co)
-- ERROR:
File "XXXX", line 8
    while (a <== b) :
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:24:22) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(co)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(co)
NameError: name 'co' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:25:56) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:28) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:28) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.126486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:41) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.146691
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.216225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.272895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.256634
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2498/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.229362
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.685263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:42) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.661018
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:43) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:43) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.444684
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:43) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
print(t=0)
-- EXECUTION TIME:
0.460143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:27:44) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b"))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
	print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:28:18) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b: "))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
	print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:28:44) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float( input("percentual de habitantes cidade b: "))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co = co +1
	print(t=0)
-- EXECUTION TIME:
0.148465
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:

-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:29:19) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float(input("percentual de habitantes cidade b: "))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co=co +1
	print(t=0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:30:22) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float(input("percentual de habitantes cidade b: "))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	co=co +1
	print(t=0)
-- EXECUTION TIME:
0.201919
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:

-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:30:56) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float(input("percentual de habitantes cidade b: "))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	t=t +1
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:31:04) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float(input("percentual de habitantes cidade b: "))
a = a1/100
b = b1/100
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	t=t +1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(t=0)
TypeError: 't' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:32:08) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float(input("percentual de habitantes cidade b: "))
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	t=t +1
print(t)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:32:29) 
-- CODE:
a = int(input("digite o num de habitantes cidade a:"))
b = int(input("digite o num de habitantes da cidade b: "))
a1 = float(input("percentual de habitantes a: "))
b1 = float(input("percentual de habitantes cidade b: "))
t=0
while (a < b) :
	a = a+(a*(a1/100))
	b = b+(b*(b1/100))
	t=t +1
print(t)
-- EXECUTION TIME:
0.154149
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
